<resources>
    <string name="app_name">Game Centre</string>
    <string name="score">Score:</string>
    <string name="try_again">Try Again</string>
    <string name="game_selection">Game Selection</string>
    <string name="scoreboard">Scoreboard!</string>
    <string name="change_scoreboard">Change Scoreboard</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="welcome_text">Welcome to Game Centre!</string>
    <string name="remember_me">Remember me</string>
    <string name="login_user">Login User</string>
    <string name="register">Register Using Credentials</string>
    <string name="login_as_guest">Login as Guest</string>

    <!-- LaunchCentre's Toast's strings-->
    <string name="lc_wrong_credentials">Wrong credentials, please try again!</string>
    <string name="lc_login_successful">Login successful!</string>

    <!-- AccountManager's Toast's strings-->
    <string name="am_guest_reserved">Account name reserved for guests only!</string>
    <string name="am_empty_field">Fields cannot be empty!</string>
    <string name="am_invalid_field">Fields cannot have less than 3 characters!</string>
    <string name="am_existing_user">User already exists!</string>
    <string name="am_credentials_saved">Account credentials saved!</string>
    <string name="am_error_save">Unable to save credentials in AccountManager!</string>
    <string name="am_register_succ">Account registered!</string>

    <!-- MovementController's Toast's strings-->
    <string name="mc_win">YOU WIN!</string>
    <string name="mc_invalid_tap">Invalid Tap</string>

    <!-- GameActivity's Strings -->
    <string name="ga_undo">Undo:%1$d</string>
    <string name="ga_save">Save</string>
    <string name="ga_logged_as">Logged in:</string>
    <string name="ga_current_user">%1$s</string>
    <string name="ga_guest_user">Guest</string>
    <string name="ga_cannot_undo">Not Able To Undo!</string>
    <string name="ga_auto_saved">Auto-saved!</string>\
    <string name="ga_manual_save">Saved!</string>
    <string name="ga_guest_save">Cannot save as guest!</string>

    <!-- GameActivity's Strings -->
    <string name="gs_confirm_deletion">Delete all games?</string>

    <!-- Scoreboard's Strings -->
    <string name="sb_game">%1$s</string>
    <string name="gsb_logged_as">Logged as: %1$s</string>
    <string name="gsb_no_score">Guest has no saved scores!</string>

    <!-- Dialog's Strings -->
    <string name="d_url_field">Custom URL Image</string>
    <string name="d_cb_use_image">Use this image as puzzle</string>
    <string name="d_load_image">Load Image</string>
    <string name="d_image_once">Image will NOT be saved nor loadable after exiting, but puzzle will remain loadable.</string>
    <string name="d_undo">Undos</string>
    <string name="d_default_undos">3</string>
    <string name="d_hint_auto_dimensions">3</string>
    <string name="d_hint_row">Rows</string>
    <string name="d_hint_col">Columns</string>
        <!-- Dialog Toast's Strings -->
        <string name="d_toast_empty_fields">Fields must not be empty</string>
        <string name="d_toast_let_3">Rows/Columns cannot be less than 3</string>
        <string name="d_toast_lat_31">Rows/Columns cannot be larger than 31</string>
        <string name="d_toast_succ_load">Load Successful!</string>
        <string name="d_toast_invalid_url">Invalid image link, make sure to copy image link address directly!</string>
        <string name="d_toast_racecar">You must wait for your image to finish downloading!</string>
        <string name="d_toast_fix_url">Your url is not valid for board creation!</string>
        <string name="d_toast_wait_url">Cannot create board when image is downloading!</string>

    <!-- LoadList's Strings-->
    <string name="ll_text_game">text game</string>
    <string name="ll_difficulty_text">difficulty</string>
    <string name="ll_load_game">Load Game</string>

    <!-- dialog SlidingDifficulty's Strings-->
    <string name="sd_confirm">Confirm</string>
    <string name="sd_x">x</string>
    <string name="sd_num_default_undos">3</string>
    <string name="sd_insert_image_url_hint">Custom URL Image</string>
    <string name="sd_use_image_message">Use this image as puzzle</string>
    <string name="sd_load_image">Load Image</string>
    <string name="sd_load_image_warning">Image will NOT be saved nor loadable after exiting, but puzzle will remain loadable.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sliding_tiles">slidingTiles</string>
    <string name="ob_dodger">obDodger</string>
    <string name="ult_ttt">ultTTT</string>>
    <string name="guest_name">Guest</string>
    <string name="button">Button</string>
    <string name="select_a_game">Select A Game!</string>
    <string name="select_loaded_games">Select Loaded Games</string>
    <string name="new_game">New Game</string>
    <string name="player">Player</string>
    <string name="num_undos">Undos</string>

    <string name="welcome_message">Welcome To Sliding Tiles   A Puzzle Game where you must arrange the numbers in the correct order</string>


</resources>
