<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_simplebg"
    tools:context="fall2018.csc2017.slidingtiles.LaunchCentre">


    <EditText
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="254dp"
        android:layout_marginEnd="22dp"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_username"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginBottom="281dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="111dp"
        android:text="Welcome to Game Centre!"
        android:textAlignment="center"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/text_username"
        android:layout_alignBottom="@+id/text_username"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="Username"
        android:textAlignment="viewStart"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="141dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_alignTop="@+id/text_password"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignBottom="@+id/text_password"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="6dp"
        android:text="Password"
        android:textAlignment="viewStart"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/cb_remember"
        android:layout_width="140dp"
        android:layout_height="51dp"
        android:layout_alignStart="@+id/textView4"
        android:layout_alignEnd="@+id/textView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="402dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="207dp"
        android:text="Remember me"
        android:textAlignment="center" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/text_username"
        android:layout_alignTop="@+id/cb_remember"
        android:layout_alignEnd="@+id/text_password"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="205dp"
        android:text="Login User"
        android:onClick="loginButtonOnClick"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="70dp"
        android:text="Register Using Credentials"
        android:onClick="registerButtonOnClick"/>

    <Button
        android:id="@+id/button_guest"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button_register"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="70dp"
        android:text="Login as Guest"
        android:onClick="guestButtonOnClick"/>

    <TextView
        android:id="@+id/text_status"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/cb_remember"
        android:layout_alignEnd="@+id/button_login"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="154dp"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>